2000-09-05  Arno W. Peters  <A.W.Peters@ieee.org>

	* ???: Paolo and I have integrated patches from Alan Gillespie
	<Alan.Gillespie@analog.com>.

2000-07-28  Arno W. Peters  <A.W.Peters@ieee.org>

	* tests/polezero/*.out: Changed the content of these files because
	the bug that caused the incorrect pole-zero results have been
	traced to src/spicelib/analysis/cktpzstr.c.

2000-07-05  Arno W. Peters  <A.W.Peters@ieee.org>

	* src/devices/dev.c: Added first_device() and next_device() to
	abstract manipulations to the devices list.  Now change all the
	code that uses direct access to these functions...

2000-07-03  Arno W. Peters  <A.W.Peters@ieee.org>

	* src/parser/alias.c, src/parser/alias.h: contain frontend alias
	command.  Moved them to src/frontend/com_alias.c and
	src/frontend/com_alias.h.  Updated Makefile.am's as appropreate.

	* src/parser/front.c, src/parser/front.h, src/parser/history.c,
	src/parser/history.h, src/parser/modify.c, src/parser/modify.h,
	src/parser/variable.c, src/parser/variable.h: Empty files.
	Removed.

	* src/include/spconfig.h: Removed spCOMPLEX,
	spSEPARATED_COMPLEX_VECTORS and spCOMPATIBILITY defines.  This
	made including this file from src/include/spmatrix.h unnecessary.
	Moved this file to src/maths/sparse/spconfig.h.

	* src/include/spmatrix.h: Removed include of
	src/include/spconfig.h.
	
	* src/maths/sparse/spalloc.c, src/maths/sparse/spbuild.c,
	src/maths/sparse/spcombin.c, src/maths/sparse/spdefs.h,
	src/maths/sparse/spfactor.c, src/maths/sparse/spoutput.c,
	src/maths/sparse/spsmp.c, src/maths/sparse/spsolve.c,
	src/maths/sparse/sputils.c: The other files affected by the
	removal of spCOMPLEX, spSEPARATED_COMPLEX_VECTORS and
	spCOMPATIBILITY defines.  Also: assertions are enabled by
	default.

	* src/include/smpdefs.h, src/maths/sparse/spsmp.c: SMPmatrix is
	now a typedef for void, instead of char.  Updated all function
	declarations to match this.  Also added function prototypes not