@@ -44,13 +44,13 @@ Author: 1986 Thomas L. Quarles
                         /* changed in the future */
 
 extern char *errMsg;    /* descriptive message about what went wrong */
-                        /* MUST be malloc()'d - front end will free() */
+                        /* MUST be tmalloc()'d - front end will tfree() */
                         /* this should be a detailed message,and is assumed */
-                        /* malloc()'d so that you will feel free to add */
+                        /* tmalloc()'d so that you will feel free to add */
                         /* lots of descriptive information with sprintf*/
 
 extern char *errRtn;    /* name of the routine declaring error */
-                        /* should not be malloc()'d, will not be free()'d */
+                        /* should not be tmalloc()'d, will not be free()'d */
                         /* This should be a simple constant in your routine */
                         /* and thus can be set correctly even if we run out */
                         /* of memory */
