@@ -275,7 +275,7 @@
  *      of elements for which memory is initially allocated and specifically
  *      reserved for fill-ins in spCreate(). [4]
  *  ELEMENTS_PER_ALLOCATION
- *      The number of matrix elements requested from the malloc utility on
+ *      The number of matrix elements requested from the tmalloc utility on
  *      each call to it.  Setting this value greater than 1 reduces the
  *      amount of overhead spent in this system call. On a virtual memory
  *      machine, its good to allocate slightly less than a page worth of
