@@ -1,3 +1,7 @@
+Error: no data saved for Sensitivity analysis; analysis not run
+doAnalyses: not found
+
+run simulation(s) aborted
 
 Circuit: simple differential pair - CM and DM dc sensitivity
 
