@@ -286,17 +286,17 @@ Index   time            v(1)
 1	6.000000e-13	1.800000e-04	
 2	7.422315e-13	2.226694e-04	
 3	1.026694e-12	3.080083e-04	
-4	1.595620e-12	4.786861e-04	
-5	2.733472e-12	8.200417e-04	
-6	5.009176e-12	1.502753e-03	
-7	9.560584e-12	2.868175e-03	
-8	1.866340e-11	5.599020e-03	
-9	3.686903e-11	1.106071e-02	
-10	7.328029e-11	2.198409e-02	
-11	1.332803e-10	3.998409e-02	
-12	1.932803e-10	5.798409e-02	
-13	2.532803e-10	7.598409e-02	
-14	3.132803e-10	9.398409e-02	
+4	1.595620e-12	4.786860e-04	
+5	2.733472e-12	8.200415e-04	
+6	5.009175e-12	1.502753e-03	
+7	9.560581e-12	2.868174e-03	
+8	1.866339e-11	5.599018e-03	
+9	3.686902e-11	1.106071e-02	
+10	7.328027e-11	2.198408e-02	
+11	1.332803e-10	3.998408e-02	
+12	1.932803e-10	5.798408e-02	
+13	2.532803e-10	7.598408e-02	
+14	3.132803e-10	9.398408e-02	
 15	3.732803e-10	1.119841e-01	
 16	4.332803e-10	1.299841e-01	
 17	4.932803e-10	1.479841e-01	
